fixed dark mode

--- a/src/css/user-review.css
+++ b/src/css/user-review.css
@@ -5,6 +5,7 @@
     gap: 1rem;
     background: var(--bg-secondary);
     border-radius: 2rem;
+    color: var(--text-primary);
 }
 
 .user-image, .review-image {
